--- a/client/ui/login_dialog.ui
+++ b/client/ui/login_dialog.ui
@@ -9,20 +9,47 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>250</height>
+    <width>406</width>
+    <height>316</height>
    </rect>
   </property>
   <property name="maximumSize">
    <size>
-    <width>400</width>
-    <height>250</height>
+    <width>2000</width>
+    <height>2000</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Database Login - Schedule Keeper</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QLabel" name="file_label">
+     <property name="text">
+      <string>Excel File</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLineEdit" name="file_path_lineedit"/>
+     </item>
+     <item>
+      <widget class="QPushButton" name="browse_pushbutton">
+       <property name="maximumSize">
+        <size>
+         <width>88</width>
+         <height>34</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Browse</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
    <item>
     <widget class="QLabel" name="address_label">
      <property name="minimumSize">
