added delete on enter checkbox

--- a/client/ui/main_window.ui
+++ b/client/ui/main_window.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1050</width>
+    <width>1150</width>
     <height>720</height>
    </rect>
   </property>
@@ -18,7 +18,7 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>1050</width>
+    <width>1150</width>
     <height>720</height>
    </size>
   </property>
@@ -36,7 +36,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="status_tab">
        <attribute name="title">
@@ -90,6 +90,22 @@
         </item>
         <item>
          <widget class="QTableWidget" name="finishedjobs_tablewidget"/>
+        </item>
+        <item alignment="Qt::AlignHCenter">
+         <widget class="QCheckBox" name="delete_after_entering_checkbox">
+          <property name="text">
+           <string>Delete After Entering</string>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+          <property name="tristate">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
         <item>
          <layout class="QHBoxLayout" name="finishedjobs_buttons">
